--- a/Workshop_1_Hands_On.ipynb
+++ b/Workshop_1_Hands_On.ipynb
@@ -23,6 +23,7 @@
         "%%capture\n",
         "!pip install xmltodict\n",
         "!pip install entsoe-py"
+        "test"
       ],
       "metadata": {
         "id": "957HZCW8Nz1_",
