--- a/Workshop2_MachineLearning_HandsOn.ipynb
+++ b/Workshop2_MachineLearning_HandsOn.ipynb
@@ -19,7 +19,6 @@
       "source": [
         "#@title Installieren der Libraries\n",
         "#@markdown Dieser Abschnitt installiert alle nötigen Libraries.\n",
-        "%%capture\n",
         "!pip install xmltodict\n",
         "!pip install entsoe-py\n",
         "!pip install pandas\n",
@@ -37,14 +36,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "M27GwgoXD4tm",
-        "cellView": "form"
+        "id": "M27GwgoXD4tm"
       },
       "outputs": [],
       "source": [
         "#@title Importieren der Libraries\n",
         "#@markdown Dieser Abschnitt lädt die nötigen Libraries.\n",
-        "%%capture\n",
         "import requests\n",
         "import pandas as pd\n",
         "import xmltodict\n",
@@ -90,7 +87,8 @@
         },
         "id": "OQzG9Kp_Rm4x",
         "outputId": "4f02980d-b12b-4deb-ddab-ded061bad738",
-        "cellView": "form"
+        "cellView": "form",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -3200,7 +3198,11 @@
         "    yaxis_title=\"[MWh]\",\n",
         "    xaxis_title=\"Jahr\",\n",
         "    legend_title=\"Stromerzeuger\"\n",
-        ")\n"
+        ")\n",
+        "\n",
+        "# Um die Abbildung im Notebook darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"generation_per_type_ch.html\")\n",
+        "FileLink(\"generation_per_type_ch.html\")\n"
       ],
       "metadata": {
         "colab": {
@@ -3208,8 +3210,7 @@
           "height": 763
         },
         "id": "IOm7YHA46Nxq",
-        "outputId": "f22761bf-c78d-42c9-ac9e-961d462dab18",
-        "cellView": "form"
+        "outputId": "f22761bf-c78d-42c9-ac9e-961d462dab18"
       },
       "execution_count": null,
       "outputs": [
@@ -3626,7 +3627,9 @@
         "    legend_title=\"Stromerzeuger\"\n",
         ")\n",
         "\n",
-        "\n"
+        "# Um die Abbildung im Notebook darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"outages_per_type_ch.html\")\n",
+        "FileLink(\"outages_per_type_ch.html\")\n"
       ],
       "metadata": {
         "colab": {
@@ -3634,8 +3637,7 @@
           "height": 763
         },
         "id": "22HxV6nGRSo7",
-        "outputId": "eaa1ab86-d769-47fe-d9a2-44d073568bc4",
-        "cellView": "form"
+        "outputId": "eaa1ab86-d769-47fe-d9a2-44d073568bc4"
       },
       "execution_count": null,
       "outputs": [
@@ -4056,6 +4058,10 @@
         "ax.set_title(\"Stromgrosshandelspreise pro Land (Durchschnitt and 95% Konfidenzinterval)\")\n",
         "plt.show()\n",
         "\n",
+        "# Um die Abbildung darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"energy_price_country_hour.html\")\n",
+        "FileLink(\"energy_price_country_hour.html\")\n",
+        "\n",
         "\n",
         "# Anzeige als Liniendiagramm mit Varianz für den Monat\n",
         "plt.figure(figsize=(15,5))\n",
@@ -4074,11 +4080,12 @@
         "ax.set_title(\"Stromgrosshandelspreise pro Land (Durchschnitt and 95% Konfidenzinterval)\")\n",
         "plt.xticks(rotation=90);\n",
         "\n",
-        "\n"
+        "# Um die Abbildung darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"energy_price_country_month.html\")\n",
+        "FileLink(\"energy_price_country_month.html\")\n"
       ],
       "metadata": {
         "id": "jYJYGNAcRSPJ",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -4474,11 +4481,14 @@
         "    xaxis_title=\"Datum\",\n",
         "    legend_title=\"Nachbarland\"\n",
         ")\n",
+        "\n",
+        "# Um die Abbildung darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"netto_import_ch.html\")\n",
+        "FileLink(\"netto_import_ch.html\")\n",
         "\n"
       ],
       "metadata": {
         "id": "MXSeWt_TAt5P",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 731
@@ -4864,10 +4874,12 @@
         "    legend_title=\"Nachbarland\"\n",
         ")\n",
         "\n",
+        "# Um die Abbildung darzustellen, speichern wir sie als html\n",
+        "fig.write_html(\"price_vs_nettoimport.html\")\n",
+        "FileLink(\"price_vs_nettoimport.html\")\n",
         "\n"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "2TNog6gTGfDb",
         "colab": {
           "base_uri": "https://localhost:8080/",
