--- a/Workshop2_MachineLearning_HandsOn.ipynb
+++ b/Workshop2_MachineLearning_HandsOn.ipynb
@@ -54,10 +54,11 @@
         "from plotly.subplots import make_subplots\n",
         "import plotly.graph_objects as go\n",
         "\n",
+        "from IPython.display import FileLink\n",
+        "\n",
         "\n",
         "warnings.filterwarnings(\"ignore\")\n",
-        "pd.options.plotting.backend = \"plotly\"\n",
-        "\n"
+        "pd.options.plotting.backend = \"plotly\"\n"
       ]
     },
     {
